--- a/_posts/2012-08-01-test-2.markdown
+++ b/_posts/2012-08-01-test-2.markdown
@@ -2,6 +2,8 @@
 title: A test photo post
 layout: photo
 description: Test.
+categories:
+    - photos
 ---
 [![Alt](http://i.imgur.com/yiTktwml.jpg)](http://google.com.au/)
 
