--- a/_posts/2013-07-13-gear-test.md
+++ b/_posts/2013-07-13-gear-test.md
@@ -5,6 +5,6 @@ categories:
   - gear
 ---
 
-## A New Post
+### A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
