--- a/_posts/2012-08-01-test-2.markdown
+++ b/_posts/2012-08-01-test-2.markdown
@@ -5,6 +5,6 @@ description: Test.
 categories:
     - photos
 ---
-[![Alt](http://i.imgur.com/yiTktwml.jpg)](http://google.com.au/)
+[![Alt](http://farm3.staticflickr.com/2812/9284456196_5fb1c1d752_z.jpg)](http://google.com.au/)
 
 Caption [#]({{ page.url }})
